syntax = "proto3";

package auth_service;

option go_package = "pb/";

message SignUpRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}

message SignUpResponse {
  int32 status = 1;
  string message = 2;
  bool result = 3;
}

message SignInRequest {
  string username = 1;
  string password = 2;
}

message SignInResponse {
  int32 status = 1;
  string message = 2;
  string access_token = 3;
  string refresh_token = 4;
}

service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
}