syntax = "proto3";

package user_service;

option go_package = "pb/";

message User {
  int32 id = 1;
  string uid = 2;
  string email = 3;
  string username = 4;
  string password = 5;
  // google.protobuf.Timestamp created_at = 6;
  // google.protobuf.Timestamp updated_at = 7;
  string created_at = 6;
  string updated_at = 7;
}

message GetUserProfileRequest { int32 id = 1; }

message GetUserProfileResponse {
  int32 status = 1;
  string message = 2;
  repeated User result = 3;
}

service UserService {
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
}